unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/AdditionalDiscountUnit__c.field-meta.xml
<CustomField>
    <fullName>AdditionalDiscountUnit__c</fullName>
    <description>The AdditionalDiscountUnit field allows admins to control the unit of an Additional Discount entered on a Quote Line. This AdditionalDiscountUnit picklist field supports Percent, Amount, Unit Override, and Total Override picklist values. Admins can include or exclude picklist values which will directly impact how users are allowed to discount quote lines using the Additional Disc field (SBQQ__AdditionalDiscount__c) in the quote line editor.</description>
    <inlineHelpText>The AdditionalDiscountUnit field allows admins to control the unit of an Additional Discount entered on a Quote Line. This AdditionalDiscountUnit picklist field supports Percent, Amount, Unit Override, and Total Override picklist values. Admins can includ</inlineHelpText>
    <label>Additional Discount Units</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Total Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>