unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Asset_Age__c.field-meta.xml
<CustomField>
    <fullName>Asset_Age__c</fullName>
    <formula>YEAR(TODAY()) - VALUE( Unit__r.Year_of_Manufacture__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>