unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Associated_External_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Associated_External_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated External Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Lines (Associated External Quote Line)</relationshipLabel>
    <relationshipName>ExternalQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>