unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Associated_Partnership_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Associated_Partnership_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Partnership Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Lines (Partnership Quote Line)</relationshipLabel>
    <relationshipName>PartnershipQuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>