unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/BC_PST_Override__c.field-meta.xml
<CustomField>
    <fullName>BC_PST_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BC PST Override</label>
    <type>Checkbox</type>
</CustomField>