unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/BC_Reduced_PST_Rate__c.field-meta.xml
<CustomField>
    <fullName>BC_Reduced_PST_Rate__c</fullName>
    <formula>IF( AND(SBQQ__Quote__r.SBQQ__Opportunity2__r.Customer_Category_for_Item_Map__c = 'External', OR(SBQQ__Quote__r.SBQQ__Opportunity2__r.Site_State_Province_Code__c = 'BC', ISPICKVAL(SBQQ__Quote__r.SBQQ__Opportunity2__r.Project_Location_Province__c, 'BC'))),
	OR(	Unit__r.BC_Reduced_PST_Rate__c, 
		SBQQ__RequiredBy__r.Related_Asset__r.BC_Reduced_PST_Rate__c, 
		Related_Asset__r.BC_Reduced_PST_Rate__c,
		SBQQ__RequiredBy__r.BC_PST_Override__c ,
		BC_PST_Override__c 
	),
	FALSE
)</formula>
    <label>BC Reduced PST Rate</label>
    <type>Checkbox</type>
</CustomField>