unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Billable_Days_Quote__c.field-meta.xml
<CustomField>
    <fullName>Billable_Days_Quote__c</fullName>
    <description>Used by Price Rule to populate Billable Days (SBQQ__Quote__r.Days_in_Month__c)</description>
    <inlineHelpText>Used by Price Rule to populate Billable Days (SBQQ__Quote__r.Days_in_Month__c)</inlineHelpText>
    <label>Billable Days Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>