unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Building_Modification_Cost__c.field-meta.xml
<CustomField>
    <fullName>Building_Modification_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Building Modification Cost</label>
    <type>Checkbox</type>
</CustomField>