unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Building_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Building_Selling_Price__c</fullName>
    <label>Building Selling Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>