unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Building_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Building_Unit_Price__c</fullName>
    <formula>SBQQ__RequiredBy__r.Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>