unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Cap_d_Trans_Included__c.field-meta.xml
<CustomField>
    <fullName>Cap_d_Trans_Included__c</fullName>
    <formula>SBQQ__Product__r.BD_Includes_Capd_Trans__c</formula>
    <label>Cap'd Trans Included</label>
    <type>Checkbox</type>
</CustomField>