unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/CAPEX_Total__c.field-meta.xml
<CustomField>
    <fullName>CAPEX_Total__c</fullName>
    <description>If the Cost Type of this quote line is CAPEX - New Build or CAPEX - Refurb, Calculates the total amount of CAPEX (Unit Cost * Quantity) for this Quote Line.</description>
    <formula>SBQQ__Quantity__c *  
CASE( Cost_Type__c , 
     "CAPEX - New Build",  SBQQ__UnitCost__c, 
     "CAPEX - Refurb", SBQQ__UnitCost__c,  
     NULL)</formula>
    <inlineHelpText>If the Cost Type of this quote line is CAPEX - New Build or CAPEX - Refurb, Calculates the total amount of CAPEX (Unit Cost * Quantity) for this Quote Line.</inlineHelpText>
    <label>CAPEX Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>