unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Structure_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail &amp; Drive Thru</fullName>
            </value>
            <value>
                <fullName>Drive Thru</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>Day Care</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Corridor/Breezeway</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Sewage</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Combo Tank</fullName>
            </value>
            <value>
                <fullName>Blast Resistant</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Community Event Trailer</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>Guardhouse</fullName>
            </value>
            <value>
                <fullName>Industrial Steel</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
            </value>
            <value>
                <fullName>Lockeroom</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>SmartSpace</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>BOXX Plex</fullName>
            </value>
            <value>
                <fullName>Flex</fullName>
            </value>
            <value>
                <fullName>Lunchroom</fullName>
            </value>
            <value>
                <fullName>Staff Quarters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>