unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/CLM_Transportation_Revenue__c.field-meta.xml
<CustomField>
    <fullName>CLM_Transportation_Revenue__c</fullName>
    <label>CLM Transportation Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>