unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Component_Custom_Total__c.field-meta.xml
<CustomField>
    <fullName>Component_Custom_Total__c</fullName>
    <label>Component Custom Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>