unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Contract_Expired__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expired__c</fullName>
    <formula>IF( Contract_End_Date__c &lt; Today(),TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Expired</label>
    <type>Checkbox</type>
</CustomField>