unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Cost_Override__c.field-meta.xml
<CustomField>
    <fullName>Cost_Override__c</fullName>
    <description>Used in conjunction with the Cost Override on the Product Option when user is in the configurator.</description>
    <label>Cost Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>