unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <description>Type of Cost used in calculations.  Defaults to Chargeable but could be Expense or CAPEX</description>
    <inlineHelpText>Type of Cost used in calculations.  Defaults to Chargeable but could be Expense or CAPEX</inlineHelpText>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BD_Cost_Type</valueSetName>
    </valueSet>
</CustomField>