unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_Last_Rule__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Last_Rule__c</fullName>
    <description>CPQ Price Rules will write the name of the rule into this field when they run</description>
    <inlineHelpText>CPQ Price Rules will write the name of the rule into this field when they run</inlineHelpText>
    <label>CPQ Last Rule</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>