unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Custom_Length__c.field-meta.xml
<CustomField>
    <fullName>Custom_Length__c</fullName>
    <label>Custom Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>