unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Daily_Amount_Calc__c.field-meta.xml
<CustomField>
    <fullName>Daily_Amount_Calc__c</fullName>
    <description>Populated by price rule from Net Total when Product Sub Frequency is Daily and line is not Optional</description>
    <inlineHelpText>Populated by price rule from Net Total when Product Sub Frequency is Daily and line is not Optional</inlineHelpText>
    <label>Daily Amount Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>