unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate__c</fullName>
    <description>Daily Rental Rate used by Energy Services</description>
    <inlineHelpText>Daily Rental Rate used by Energy Services</inlineHelpText>
    <label>Daily Rate</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>