unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Daily_Rate_Effective__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate_Effective__c</fullName>
    <description>Price Rule calculates the Effective Daily Rate after discounts (Monthly rate after discounts / Days in Month)</description>
    <inlineHelpText>Price Rule calculates the Effective Daily Rate after discounts (Monthly rate after discounts / Days in Month)</inlineHelpText>
    <label>Daily Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>