unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Daily_Unit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Daily_Unit_Amount__c</fullName>
    <description>Daily Amount per unit (Daily amount divided by Quantity)</description>
    <formula>Daily_Rate_Effective__c /  SBQQ__Quantity__c</formula>
    <inlineHelpText>Daily Amount per unit (Daily amount divided by Quantity)</inlineHelpText>
    <label>Daily Unit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>