unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <label>Date Approved</label>
    <type>DateTime</type>
</CustomField>