unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Description_for_Conga__c.field-meta.xml
<CustomField>
    <fullName>Description_for_Conga__c</fullName>
    <description>Copy of non-marked up text from the Description field</description>
    <label>Description for Conga</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>