unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Effective_Net_Total_Currency__c.field-meta.xml
<CustomField>
    <fullName>Effective_Net_Total_Currency__c</fullName>
    <description>Effective Net Total can't be used in rollups as a formula, so adding text field</description>
    <inlineHelpText>Effective Net Total can't be used in rollups as a formula, so adding text field</inlineHelpText>
    <label>Effective Net Total Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>