unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Expired_Contract__c.field-meta.xml
<CustomField>
    <fullName>Expired_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expired Contract</label>
    <type>Checkbox</type>
</CustomField>