unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/External_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>External_Quote_Line__c</fullName>
    <formula>SBQQ__Group__r.External__c</formula>
    <label>External Quote Line</label>
    <type>Checkbox</type>
</CustomField>