unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Fee_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type_ID__c</fullName>
    <label>Fee Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>