unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Final_New_Infleet_Factor__c.field-meta.xml
<CustomField>
    <fullName>Final_New_Infleet_Factor__c</fullName>
    <formula>IF( Shell__c ,Unit_Price__c / SBQQ__UnitCost__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final New/Infleet Factor</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>