unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Final_New_Infleet_ROA__c.field-meta.xml
<CustomField>
    <fullName>Final_New_Infleet_ROA__c</fullName>
    <formula>IF( Shell__c ,(Unit_Price__c / SBQQ__UnitCost__c)*SBQQ__Quote__r.SBQQ__SubscriptionTerm__c ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final ROA New/Infleet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>