unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Final_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Selling_Price__c</fullName>
    <label>Proposed Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>