unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Frame_Type__c.field-meta.xml
<CustomField>
    <fullName>Frame_Type__c</fullName>
    <label>Frame Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frameless</fullName>
            </value>
            <value>
                <fullName>Frame</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>