unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Infleet_Unit_Involved__c.field-meta.xml
<CustomField>
    <fullName>Infleet_Unit_Involved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infleet Unit Involved</label>
    <type>Checkbox</type>
</CustomField>