unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>Internal_Note__c</fullName>
    <description>Notes area for Sales rep to add for each line item that will not show on the quote</description>
    <label>Internal Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>