unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Complex__c.field-meta.xml
<CustomField>
    <fullName>Is_Complex__c</fullName>
    <formula>OR(IF(AND(NOT(ISBLANK(SBQQ__Group__c)),NOT(ISBLANK(SBQQ__Group__r.Related_Asset__c)),SBQQ__Group__r.Related_Asset__r.Complex__c = 'Yes'),TRUE,FALSE),IF(AND(NOT(ISBLANK( Related_Asset__c )), (Related_Asset__r.Complex__c = 'Yes')),TRUE,FALSE), 
   IF(AND(NOT(ISBLANK( SBQQ__RequiredBy__r.Related_Asset__c )),(SBQQ__RequiredBy__r.Related_Asset__r.Complex__c = 'Yes')),TRUE,FALSE) 
)</formula>
    <label>Is Complex?</label>
    <type>Checkbox</type>
</CustomField>