unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/isWon__c.field-meta.xml
<CustomField>
    <fullName>isWon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isWon</label>
    <type>Checkbox</type>
</CustomField>