unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/JV_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>JV_Quote_Line_Item__c</fullName>
    <formula>SBQQ__Group__r.Joint_Venture_Line_Items__c</formula>
    <label>JV Quote Line Item</label>
    <type>Checkbox</type>
</CustomField>