unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Legal_Term__c.field-meta.xml
<CustomField>
    <fullName>Legal_Term__c</fullName>
    <description>Legal Terms of categories for use on the Contract documents</description>
    <formula>TEXT(SBQQ__Product__r.Legal_Term__c)</formula>
    <inlineHelpText>Legal Terms of categories for use on the Contract documents</inlineHelpText>
    <label>Legal Terminology</label>
    <type>Text</type>
</CustomField>