unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/List_Unit_Price_Option_2__c.field-meta.xml
<CustomField>
    <fullName>List_Unit_Price_Option_2__c</fullName>
    <label>List Unit Price Option 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>