unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Man_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Man_Serial_Number__c</fullName>
    <description>Manufacturer's Serial Number/Series</description>
    <formula>Unit__r.Manufacturers_Serial_Number__c</formula>
    <inlineHelpText>Manufacturer's Serial Number/Series</inlineHelpText>
    <label>Man. Serial Number</label>
    <type>Text</type>
</CustomField>