unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_Percent__c</fullName>
    <description>Margin amount (Sale price less the unit cost) divided by the Sale price</description>
    <formula>IF( ISBLANK(Margin_Amount__c), NULL, Margin_Amount__c /  SBQQ__NetTotal__c)</formula>
    <inlineHelpText>Margin amount (Sale price less the unit cost) divided by the Sale price</inlineHelpText>
    <label>Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>