unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Markup_2__c.field-meta.xml
<CustomField>
    <fullName>Markup_2__c</fullName>
    <formula>IF( Shell__c ,
     IF(OR(Infleet_Unit_Involved__c , New_Unit_Involved__c), SBQQ__Quote__r.Markup_2__c , 
        IF(SBQQ__ProductFamily__c = 'Upfronts',  SBQQ__Quote__r.Upfront_Markup_2__c ,
            IF( SBQQ__ProductFamily__c = 'Backend',  SBQQ__Quote__r.Backend_Markup_2__c ,NULL)  
            )
       ),NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>