unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Markup_Effective__c.field-meta.xml
<CustomField>
    <fullName>Markup_Effective__c</fullName>
    <description>Calculate the $ markup value using the Markup Amount or the Markup % rate</description>
    <formula>IF(SBQQ__MarkupRate__c = 0,  SBQQ__MarkupAmount__c , Total_Cost_of_Non_Rental__c * MarkupRate_Display__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculate the $ markup value using the Markup Amount or the Markup % rate</inlineHelpText>
    <label>Markup Effective</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>