unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Markup_Effective_Percent__c.field-meta.xml
<CustomField>
    <fullName>Markup_Effective_Percent__c</fullName>
    <description>Calculate the % markup value using the Markup Amount</description>
    <formula>IF( Total_Cost_of_Non_Rental__c=0, NULL, IF( ISBLANK(SBQQ__MarkupRate__c), SBQQ__MarkupAmount__c * SBQQ__Quantity__c / Total_Cost_of_Non_Rental__c , MarkupRate_Display__c))</formula>
    <inlineHelpText>Calculate the % markup value using the Markup Amount</inlineHelpText>
    <label>Markup Effective %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>