unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/MarkupRate_Display__c.field-meta.xml
<CustomField>
    <fullName>MarkupRate_Display__c</fullName>
    <description>Used to mask actual markup rate for Daily Sublease</description>
    <formula>IF(AND(Trans_Category__c = "Sub Rental", Product_Subscription_Frequency__c = "Daily"), (Unit_Price__c-SBQQ__UnitCost__c)/SBQQ__UnitCost__c , SBQQ__MarkupRate__c)</formula>
    <inlineHelpText>Used to mask actual markup rate for Daily Sublease</inlineHelpText>
    <label>MarkupRate Display</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>