unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount__c</fullName>
    <description>Total Monthly price after Discount (Discounted List Price * Quantity)</description>
    <formula>IF( AND( Transaction_Type_Text__c = "Rental", OR(Trans_Category__c = "Rental", Trans_Category__c = "Carry On",Trans_Category__c = "Insurance", Trans_Category__c = "Lodging", Trans_Category__c = "Sub Rental", AND(AND(SBQQ__ProductFamily__c = "VAPS", NOT(SBQQ__Group__r.VAPS_Sale__c) ), Product_Type__c &lt;&gt; 'Operations'))) , SBQQ__NetTotal__c / SBQQ__Quote__r.SBQQ__SubscriptionTerm__c, NULL)</formula>
    <inlineHelpText>Total Monthly price after Discount (Discounted List Price * Quantity)</inlineHelpText>
    <label>Monthly Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>