unpackaged/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Amount_Calc__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Amount_Calc__c</fullName>
    <description>Populated by price rule from Net Total when Product Sub Frequency is Monthly and line is not Optional</description>
    <inlineHelpText>Populated by price rule from Net Total when Product Sub Frequency is Monthly and line is not Optional</inlineHelpText>
    <label>Monthly Amount Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>